--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -95,6 +95,7 @@
     #inputNumber {
         height: 40px;
         margin-right: 10px;
+        border-radius: 10px;
     }
     #inputRow {
         display: flex;
@@ -103,7 +104,7 @@
         text-align: center;
         align-items: center;
     }
-    .aux_data {
+    .aux_data, .mats {
         font-size: 1.5rem;
         font-weight: bold;
         background-color: #007bff;
@@ -341,8 +342,8 @@
                 <div id="result">
                     <p class="classification" id="classification"></p>
                 </div>
-                <div id="material container">
-                    <p class="mats" id="mats"></p>
+                <div id="material_container">
+                    <p class="mats" id="mats">Predicted Composition: Nickel, Iron, Silicate</p>
                 </div>
                 <div id="aux">
                     <p class="aux_data" id="aux_data"></p>
@@ -361,6 +362,7 @@ document.getElementById("result").style.display = "none";
 document.getElementById("aux").style.display = "none";
 document.getElementById("img").style.display = "none";
 document.getElementById("identity").style.display = "none";
+document.getElementById("material_container").style.display = "none";
 
 function custom () {
     document.getElementById()
@@ -375,10 +377,12 @@ function classifyAsteroid() {
             document.getElementById("aux").style.display = "none";
             document.getElementById("img").style.display = "none";
             document.getElementById("identity").style.display = "none";
+            document.getElementById("material_container").style.display = "none";
 
 
             document.getElementById("classification").innerText = data.classification;
             document.getElementById("result").style.display = "block";
+            document.getElementById("material_container").style.display = "block";
 
             if (data.aux_data) {
                 document.getElementById('aux_data').innerText = data.aux_data;
